# lab_mcp

./: .env.example  .gitignore  .sentinel.yaml.example  CLAUDE.md  README.md  pyproject.toml  sentinel.sh
docker/: .sentinel.yaml.example  Dockerfile  docker-compose.yml  entrypoint.sh  setup-keys.sh  ssh_config.example
docs/: PRD.md
docs/adr/: ADR-001-mcp-server-as-core.md  ADR-002-ssh-config-as-inventory.md  ADR-003-hexagonal-architecture.md  ADR-004-security-boundaries.md  ADR-005-openai-cli-client.md
examples/: relatorio-exemplo.md
src/lab_sentinel/: __init__.py  cli.py  config.py  connectivity.py  diagnostics.py  factory.py  models.py  parsers.py  ports.py  report.py  results.py  server.py
src/lab_sentinel/adapters/: config.py  connectivity.py  ssh_audit.py
src/lab_sentinel/core/: diagnostics.py  parsers.py  report.py
src/lab_sentinel/domain/: errors.py  ports.py  results.py
src/lab_sentinel/entrypoints/: cli.py  factory.py  server.py
tests/: conftest.py  test_cli.py  test_config.py  test_connectivity.py  test_diagnostics.py  test_parsers.py  test_report.py  test_server.py
