[project]
name = "lab-sentinel-mcp"
version = "1.0.0"
description = "MCP server for read-only diagnostics of academic/lab infrastructure (Raspberry Pi, Linux PCs, SSH hosts)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "paramiko>=3.4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "rich>=15.0.0",
]

[project.scripts]
lab-sentinel-mcp = "lab_sentinel.server:main"
lab-sentinel = "lab_sentinel.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
